log
Thu 28 Mar 2024 02:49:26 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
662cc04
Thu 28 Mar 2024 02:53:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8ea9da6
Thu 28 Mar 2024 02:59:24 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:54: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   40 |         if (list == NULL || list -> current == NULL) return;
      |                                                      ^~~~~~
list.c:39:8: note: declared here
   39 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a6ebfc1
Thu 28 Mar 2024 02:59:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3d56af
Thu 28 Mar 2024 03:01:02 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
7d38522
Thu 28 Mar 2024 03:09:20 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2fbd61d
Thu 28 Mar 2024 03:09:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c38a2a2
Thu 28 Mar 2024 03:10:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
cb0962d
Thu 28 Mar 2024 03:14:58 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
28b4322
Thu 28 Mar 2024 03:16:16 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
464bf6a
Fri 29 Mar 2024 03:13:49 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
0848533
Fri 29 Mar 2024 03:22:47 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:15: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   64 |         Node* nuevoNodo = createNode(data);
      |               ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
277a4de
Fri 29 Mar 2024 03:22:57 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
4b43564
Fri 29 Mar 2024 10:43:11 PM UTC: 
 list.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
580cd37
